<resources>
    <string name="app_name">androidstudy</string>
    <string name="textview">TextView</string>
    <string name="text_view_1">博学之，审视之，慎思之，明辨之</string>
    <string name="text_view_2">博学之，审视之，慎思之，明辨之, 博学之，审视之，慎思之，明辨之, 博学之，审视之，慎思之，明辨之</string>
    <string name="search">搜索</string>
    <string name="button">Button</string>
    <string name="bnt_1">按钮1</string>
    <string name="bnt_2">按钮2</string>
    <string name="bnt_3">按钮3</string>
    <string name="bnt_4">按钮4</string>
    <string name="Edittext">EditText</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="radiobutton">RadioButton</string>
    <string name="man">男</string>
    <string name="feman">女</string>
    <string name="checkbox">CheckBox</string>
    <string name="android">Android</string>
    <string name="textContent">你会的移动开发:</string>
    <string name="imageview">ImageView</string>
    <string name="kobe">kobe</string>
    <string name="listview">ListView</string>
    <string name="title">我是标题</string>
    <string name="time">我是时间</string>
    <string name="content">我是内容</string>
    <string name="tree">树</string>
    <string name="gridview">GridView</string>
    <string name="tableview">列表视图</string>
    <string name="recyclerview">RecyclerView</string>
</resources>