<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">

    <EditText
            android:id="@+id/et_01"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/user_name"
            android:textColor="#FF9900"
            android:textSize="18sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginTop="40dp"/>

    <EditText
            android:id="@+id/et_02"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/password"
            android:textColor="#FF9900"
            android:textSize="18sp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:inputType="textPassword"
            android:layout_below="@+id/et_01"
            android:layout_marginTop="10dp"/>

    <Button
            android:id="@+id/btn_01"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/et_02"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColorHint="#FF9900"
            android:layout_marginTop="30dp"/>

</RelativeLayout>