<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
            android:id="@+id/text_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>
    <TextView
            android:id="@+id/text_02"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/text_view_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:ellipsize="end"
            />

    <TextView
            android:id="@+id/text_03"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:text="@string/search"
            android:textColor="#000000"
            android:textSize="25sp"
            app:drawableRightCompat="@drawable/arrow_down"
            android:drawablePadding="5dp"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/text_04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/text_05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/text_06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_1"
            android:textColor="#000000"
            android:textSize="24sp"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/text_07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_2"
            android:textColor="#000000"
            android:textSize="24sp"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"/>

</LinearLayout>